<resources>
    <string name="app_name">Jules Verne &amp; Books</string>
    <string name="jules">\" Jules Verne \"</string>
    <string name="quiz">Start QuIz</string>
    <string name="submit">SUBMIT</string>
    <string name="about">Books</string>
    <string name="p2name">Questions</string>
    <string name="p3name">Score</string>
    <string name="p4name">Answers</string>
    <string name="quit">QUIT</string>
    <string name="score">Your score is </string>
    <string name="score2"> out of 10 points.</string>
    <string name="count">You answered correctly </string>
    <string name="count2"> of 4 questions.</string>
    <string name="tryAgain">TRY AGAIN</string>
    <string name="answers">Answers</string>
    <string name="answer3">Cannon Ball or Projectile or Columbiad</string>
    <string name="book1">1 \- \"20000 Leagues Under the Sea?\"</string>
    <string name="q1">Which one is visited by Captain Nemo\'s submarine?</string>
    <string name="q1_a1_Troy">Troy</string>
    <string name="q1_b1_Rlyeh">R\'lyeh</string>
    <string name="q1_c1_Mu">Lost Continent Mu</string>
    <string name="q1_d1_Atlantis">Atlantis</string>
    <string name="book2">2 \- \"Around the World in 80 Days\"</string>
    <string name="q2">Which characters are NOT belong to the book above?</string>
    <string name="q2_a2_phileas_fogg">Phileas Fogg</string>
    <string name="q2_b2_michel_ardan">Michel Ardan</string>
    <string name="q2_c2_lidenbrock">Lidenbrock</string>
    <string name="q2_d2_francis_cromarty">Sir Francis Cromarty</string>
    <string name="q2_e2_arne_saknussem">Arne Saknussemm</string>
    <string name="book3">3 \- \"From the Earth to the Moon\"</string>
    <string name="q3">Which transportation vehicle did the characters use for going to the moon?</string>
    <string name="hint3">Please write your answer here</string>
    <string name="book4">4 \- \"Journey to the Center of the Earth\"</string>
    <string name="q4">Where is the entrance of way to the center of the earth?</string>
    <string name="q4_a4_v_iceland">A Volcano in Iceland</string>
    <string name="q4_b4_v_newzealand">A Volcano in New Zealand</string>
    <string name="q4_c4_m_paris">A Museum in Paris</string>
    <string name="q4_d4_north_pole">At the North Pole</string>
</resources>