<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.Questions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/jvbooks"
            android:contentDescription="@string/about"
            android:scaleType="centerCrop"/>

        <TextView
            style="@style/bookNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book1"/>
        <TextView
            style="@style/questionBodies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"/>
        <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q1_a1_Troy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a1_Troy"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q1_b1_Rlyeh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_b1_Rlyeh"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q1_c1_Mu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_c1_Mu"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q1_d1_Atlantis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_d1_Atlantis"/>
        </RadioGroup>

        <TextView
            style="@style/bookNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book2"/>
        <TextView
            style="@style/questionBodies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"/>
        <CheckBox
            style="@style/choiceBoxes"
            android:id="@+id/q2_a2_phileas_fogg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_a2_phileas_fogg"/>
        <CheckBox
            style="@style/choiceBoxes"
            android:id="@+id/q2_b2_michel_ardan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_b2_michel_ardan"/>
        <CheckBox
            style="@style/choiceBoxes"
            android:id="@+id/q2_c2_lidenbrock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_c2_lidenbrock"/>
        <CheckBox
            style="@style/choiceBoxes"
            android:id="@+id/q2_d2_francis_cromarty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_d2_francis_cromarty"/>
        <CheckBox
            style="@style/choiceBoxes"
            android:id="@+id/q2_e2_arne_saknussem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_e2_arne_saknussem"/>

        <TextView
            style="@style/bookNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book3"/>
        <TextView
            style="@style/questionBodies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"/>
        <EditText
            android:id="@+id/q3_a3_your_answer"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:inputType="text"
            android:hint="@string/hint3"/>

        <TextView
            style="@style/bookNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book4"/>
        <TextView
            style="@style/questionBodies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"/>
        <RadioGroup
            android:id="@+id/radioButtons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q4_a4_v_iceland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a4_v_iceland"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q4_b4_v_newzealand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_b4_v_newzealand"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q4_c4_m_paris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_c4_m_paris"/>
            <RadioButton
                style="@style/choiceBoxes"
                android:id="@+id/q4_d4_north_pole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_d4_north_pole"/>
        </RadioGroup>

        <Button
            style="@style/buttons"
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit"/>
        <Button
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answers"
            android:onClick="answers" />
        <Button
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:onClick="quit" />

    </LinearLayout>

</ScrollView>