<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/julesverne"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/jules"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:text="@string/jules"
            android:textColor="@color/jules"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/jules"/>

        <Button
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            android:onClick="start"/>

    </LinearLayout>
</ScrollView>